@@ -1391,6 +1391,8 @@ static struct Damage battle_calc_weapon_attack(struct block_list *src,struct blo
 			case GN_CARTCANNON:
 				if( sd && pc_checkskill(sd, GN_REMODELING_CART) )
 					hitrate += hitrate * (pc_checkskill(sd, GN_REMODELING_CART) * 4) / 100;
+			case GC_VENOMPRESSURE:
+				hitrate += 10 + 4 * skill_lv;
 				break;
 		}
 
